refactor: 반환형태 및 유저 존재여부 체크 삭제